<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ThirdQuestion">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="325dp"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="Choose ​​all the countries crossed by the Danube"
        android:textColor="?android:attr/colorLongPressedHighlight"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="141dp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:onClick="onClick"
        android:text="@string/button_Q3_Austria"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button3"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:onClick="onClick"
        android:text="@string/button_Q3_Hungary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button4"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:layout_marginTop="90dp"
        android:onClick="onClick"
        android:text="@string/button_Q3_Ukraine"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:layout_marginTop="90dp"
        android:onClick="onClick"
        android:text="@string/button_Q3_Czechia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="163dp"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="onClick"
        android:text="@string/check_button"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button7"
        android:layout_width="161dp"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        android:background="@android:color/holo_red_light"
        android:onClick="onClick"
        android:text="@string/clear_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="125dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="24sp"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button8"
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:background="@android:drawable/ic_media_next"
        android:enabled="false"
        android:onClick="Arrow"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>